# tony-snack-export-erp

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8f681e85a05d_initial_schema.py  a1b2c3d4e5f6_add_orders.py  b7c8d9e0f1a2_add_warehouse_container_logistics.py  c3d4e5f6a7b8_add_audit_logs_system_configs.py  d4e5f6a7b8c9_add_product_categories.py  e5f6a7b8c9d0_add_batch_inventory_outbound.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: deps.py
backend/app/core/: exceptions.py  logging.py  permissions.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  container.py  customer.py  enums.py  logistics.py  outbound.py  product.py  product_category.py  purchase_order.py  sales_order.py  supplier.py  system_config.py  user.py  warehouse.py
backend/app/repositories/: audit_log_repo.py  base.py  container_repo.py  customer_repo.py  logistics_repo.py  outbound_repo.py  product_category_repo.py  product_repo.py  purchase_order_repo.py  sales_order_repo.py  supplier_repo.py  system_config_repo.py  user_repo.py  warehouse_repo.py
backend/app/schemas/: common.py  container.py  customer.py  dashboard.py  logistics.py  outbound.py  product.py  product_category.py  purchase_order.py  sales_order.py  statistics.py  supplier.py  system.py  user.py  warehouse.py
backend/app/services/: audit_service.py  auth_service.py  (+14 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  factories.py
(+152 files in other folders)
